--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="google-site-verification" content="_M8lIAjc6K-RAVVokiPTG5rndPbY7oSm6amdDhAREmE" />
-    
+    <meta name="msvalidate.01" content="48B9290EF44D7E6829A0E35BFE4DF91B" />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
